# src/backend/app/models/models.py
@@ -9,10 +9,14 @@ class Prompt(db.Model):
     id = db.Column(UUID(as_uuid=True), primary_key=True, default=uuid.uuid4)
     prompt = db.Column(db.Text, nullable=False)
     timestamp = db.Column(db.DateTime, default=datetime.utcnow)
+    user = db.Column(db.String(30), nullable=False)
+    status = db.Column(db.String(30), nullable=False)
 
     def to_dict(self):
         return {
             "id": str(self.id),
             "prompt": self.prompt,
-            "timestamp": self.timestamp.isoformat()
+            "timestamp": self.timestamp.isoformat(),
+            "user": self.user,
+            "status": self.user
         }
